--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,20 @@ line-profiler = "^3.4.0"
 flake8 = "^4.0.1"
 black = "^22.1.0"
 isort = "^5.10.1"
+pytest = "6.2.5"
+pytest-cov = "^3.0.0"
+pytest-asyncio = "0.16.0"
+pytest-mock = "^3"
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+addopts = ["-v", "--cov"]
+
+[tool.coverage.run]
+branch = true
+
+[tool.coverage.report]
+omit = ["tests/*"]
 
 [tool.black]
 line-length = 120
