--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -40,9 +40,13 @@ jobs:
       # run check style 
       #----------------------------------------------
       - name: flake8
-        run: flake8 pprof/
+        run: |
+          source .venv/bin/activate
+          flake8 pprof/
       #----------------------------------------------
       # run tests
       #----------------------------------------------
       - name: pytest
-        run: pytest
+        run: |
+          source .venv/bin/activate
+          pytest
