--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -23,7 +23,7 @@ jobs:
     
     steps:
       #----------------------------------------------
-      #  check-out repo and set-up python
+      #  Check-out repo and set-up python
       #----------------------------------------------
       - name: Check out repository
         uses: actions/checkout@v2
@@ -33,7 +33,7 @@ jobs:
         with:
           python-version: ${{ matrix.python }}
       #----------------------------------------------
-      #  configure poetry 
+      #  Configure poetry 
       #----------------------------------------------
       - name: Install Poetry
         uses: snok/install-poetry@v1
@@ -42,31 +42,39 @@ jobs:
           virtualenvs-in-project: true
           installer-parallel: true
       #----------------------------------------------
-      # install dependencies 
+      # Install dependencies 
       #----------------------------------------------
       - name: Install dependencies
         run: poetry install --no-interaction
       #----------------------------------------------
-      # run check style 
+      # Run check style 
       #----------------------------------------------
-      - name: flake8
+      - name: Flake8
         run: |
           source $VENV
           flake8 pprof/
       #----------------------------------------------
-      # run tests
+      # Run tests
       #----------------------------------------------
-      - name: pytest
+      - name: Pytest
         run: |
           source $VENV
           pytest
       #----------------------------------------------
-      # upload coverage
+      # Upload coverage
       #----------------------------------------------
-      - name: coverage     
+      - name: Upload coverage     
         uses: codecov/codecov-action@v1
         if: matrix.python == '3.6' && matrix.platform == 'ubuntu-latest'
         with:
           token: ${{ secrets.CI_CODECOV }}  # Only required for private repositories
           file: ./coverage.xml
           fail_ci_if_error: true
+      #----------------------------------------------
+      # Check coverage
+      #----------------------------------------------
+      - name: Check coverage
+        if: matrix.python == '3.6' && matrix.platform == 'ubuntu-latest'
+        run: |
+          source $VENV
+          coverage xml --fail-under=80
