--- a/codecov.yml
+++ b/codecov.yml
@@ -1,3 +1,16 @@
 coverage:
+  round: up
+  range: 80..100
+  project:
+    default: 
+      target: 80%
+      threshold: 5%
   status:
     patch: off
+
+comment:                  
+  layout: "reach, diff, flags, files"
+  behavior: default
+  require_changes: false  # if true: only post the comment if coverage changes
+  require_base: no        # [yes :: must have a base report to post]
+  require_head: yes       # [yes :: must have a head report to post]
