--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,8 +32,8 @@ black = "^22.1.0"
 isort = "^5.10.1"
 pytest = "6.2.5"
 pytest-cov = "^3.0.0"
-pytest-asyncio = "0.16.0"
 pytest-mock = "^3"
+pytest-ordering = "^0.6"
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
