--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,9 @@ pytest = "6.2.5"
 pytest-cov = "^3.0.0"
 pytest-mock = "^3"
 pytest-ordering = "^0.6"
+flake8-isort = "^4.1.1"
+flake8-bugbear = "^22.3.23"
+flake8-eradicate = "^1.2.0"
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
