--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -2,13 +2,9 @@ name: Publish
 
 on:
   workflow_dispatch:
-    inputs:
-      repository:
-        type: choice
-        description: Python repository
-        options: 
-        - test
-        - prod
+  release:
+    types:
+      - created
     
 jobs:
   build:  
@@ -63,7 +59,7 @@ jobs:
 
   publish_repo:
     name: Uploading to PyPi
-    if: github.event.inputs.repository == 'prod'
+    if: github.event_name == 'release'
     runs-on: ubuntu-latest
     needs: [build]
     steps:
@@ -114,7 +110,7 @@ jobs:
 
   publish_test_repo:
     name: Uploading to Test PyPi
-    if: github.event.inputs.repository == 'test'
+    if: github.event_name == 'workflow_dispatch'
     runs-on: ubuntu-latest
     needs: [build]
     steps:
