--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -86,6 +86,7 @@ jobs:
       - name: Install Poetry
         uses: snok/install-poetry@v1
         with:
+          version: 1.1.15
           virtualenvs-create: true
           virtualenvs-in-project: true
           installer-parallel: true
