--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -35,6 +35,7 @@ jobs:
       - name: Install Poetry
         uses: snok/install-poetry@v1
         with:
+          version: 1.1.14
           virtualenvs-create: true
           virtualenvs-in-project: true
           installer-parallel: true
@@ -90,6 +91,7 @@ jobs:
       - name: Install Poetry
         uses: snok/install-poetry@v1
         with:
+          version: 1.1.14
           virtualenvs-create: true
           virtualenvs-in-project: true
           installer-parallel: true
