--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,12 +31,12 @@ flake8 = "^5.0.4"
 black = "^22.8.0"
 isort = "^5.10.1"
 pytest = "7.0.1"
-pytest-cov = "^3.0.0"
 pytest-mock = "^3"
 pytest-ordering = "^0.6"
 flake8-isort = "^4.2.0"
-flake8-bugbear = "^22.8.23"
-flake8-eradicate = "^1.3.0"
+flake8-eradicate = "1.3.0"
+pytest-cov = "^4.0.0"
+flake8-bugbear = "^22.9.23"
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
