--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -8,7 +8,7 @@ on:
 jobs:
   Check:
     name: Check Style Code
-    runs-on: ubuntu-latest
+    runs-on: ubuntu:20.04
     steps:
       #----------------------------------------------
       #  Check-out repo
