--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -59,7 +59,7 @@ jobs:
     strategy:
       matrix:
         python: ['3.6','3.7','3.8','3.9']
-        platform: [ubuntu-latest, macos-latest, windows-latest]
+        platform: [ubuntu-20.04, macos-latest, windows-latest]
     
     runs-on: ${{ matrix.platform }}
     
