--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -108,7 +108,7 @@ jobs:
       #----------------------------------------------
       - name: Upload coverage artifact
         uses: actions/upload-artifact@v3
-        if: matrix.python == '3.6' && matrix.platform == 'ubuntu-latest'
+        if: matrix.python == '3.6' && matrix.platform == 'ubuntu-20.04'
         with:
           name: coverage
           path: "*coverage.*"
